# firebolt-rust-sdk

./: .pre-commit-config.yaml  Cargo.toml  DOCUMENTATION.md  README.md
.github/: dependabot.yml
.github/actions/version-generation/: action.yml
.github/scripts/: generate_version_tag.py
.github/workflows/: integration-tests.yml  pr-checks.yml  pr-title-check.yml  release.yml
src/: client.rs  error.rs  lib.rs  parser.rs  result.rs  types.rs  version.rs
src/auth/: client_credentials.rs  mod.rs
tests/: auth.rs  client_factory_integration.rs  integration.rs  query.rs
tests/common/: mod.rs
