[package]
name = "firebolt"
version = "0.0.1"
edition = "2021"
authors = ["Firebolt <support@firebolt.io>"]
description = "A Rust SDK for Firebolt"
homepage = "https://www.firebolt.io"
repository = "https://github.com/firebolt-db/firebolt-rust-sdk"
license = "Apache-2.0"
keywords = ["firebolt", "database", "sql", "analytics"]
categories = ["database", "api-bindings"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]

[lib]
name = "firebolt"
path = "src/lib.rs"
