[package]
name = "firebolt"
version = "0.1.0"
edition = "2021"
authors = ["Firebolt <support@firebolt.io>"]
description = "A Rust SDK for Firebolt"
homepage = "https://www.firebolt.io"
repository = "https://github.com/firebolt-db/firebolt-rust-sdk"
license = "Apache-2.0"
keywords = ["firebolt", "database", "sql", "analytics"]
categories = ["database", "api-bindings"]
readme = "README.md"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"
uuid = { version = "1.18", features = ["v4"] }
url = "2.0"
num-bigint = { version = "0.4", features = ["serde"] }
rust_decimal = "1.29"
chrono = "0.4"
regex = "1.0"
hex = "0.4"

[dev-dependencies]
mockito = "1.0"

[lib]
name = "firebolt"
path = "src/lib.rs"
